# torchqc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: Dynamical_blockade_coupled_bosonic_modes.ipynb  Dynamical_blockade_single_mode_bosonic_system.ipynb  Dynamical_blockade_single_mode_gaussian_pulses.ipynb  Jaynes_Cummings_model.ipynb  Jaynes_Cummings_model_cat_state.ipynb  Jaynes_Cummings_model_coherent_state.ipynb  Jaynes_Cummings_model_photon_number_parity_oscillations.ipynb  Lossy_Jaynes_Cummings_model.ipynb  Lossy_Jaynes_Cummings_model_coherent_state.ipynb  Lossy_Jaynes_Cummings_model_coherent_state_using_gpu.ipynb  Quantum_Rabi_model.ipynb  Two_operator_two_time_correlation_function.ipynb  composite_system_dynamics.ipynb  correlation_functions.ipynb  coupled_qubits_plus_resonator.ipynb  coupled_qubits_resonator_BBNN.ipynb  coupled_qubits_resonator_BBNN_extra_costs.ipynb  coupled_spins_3lvl_system.ipynb  demonstrations.ipynb  dicke_spin_states.ipynb  emission_spectum.ipynb  lambda_3lvl_system_BBNN.ipynb  lambda_3lvl_system_BBNN_using_gpu.ipynb  lambda_3lvl_system_STIRAP.ipynb  optomechanical_system.ipynb  qubit_rabi_oscillations.ipynb  qubit_rabi_oscillations_using_gpu.ipynb  single_bosonic_mode.ipynb  single_qubit_dynamics.ipynb  single_qubit_markovian_master_equation_fock_liouville.ipynb  single_qubit_markovian_master_equation_fock_liouville_gpu.ipynb  single_qubit_markovian_master_equation_num_methods.ipynb  single_qubit_quantum_monte_carlo_trajectories.ipynb  steadystate.ipynb
torchqc/: adams_bashforth_methods.py  spin.py  (+11 more)
